--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,12 @@
     tools:context=".ui.MainActivity">
 
     <Button
+        android:id="@+id/btn_start0"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="网络请求0" />
+
+    <Button
         android:id="@+id/btn_start1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
