--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,11 +40,11 @@
             android:textAllCaps="false" />
 
         <Button
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:onClick="getUserInfo"
-                android:text="路径组合url(GET)"
-                android:textAllCaps="false"/>
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="getUserInfo"
+            android:text="路径组合url(GET)"
+            android:textAllCaps="false" />
 
         <Button
             android:layout_width="match_parent"
@@ -56,15 +56,8 @@
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:onClick="logout"
-            android:text="返回类型为object(POST)"
-            android:textAllCaps="false" />
-
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
             android:onClick="redirectRequest"
-            android:text="排除部分接口(GET)"
+            android:text="部分接口不Mock(GET)"
             android:textAllCaps="false" />
 
         <Button
@@ -72,20 +65,6 @@
             android:layout_height="wrap_content"
             android:onClick="delete"
             android:text="多路径组合url(DELETE)"
-            android:textAllCaps="false" />
-
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:onClick="singleGeneric"
-            android:text="单泛型嵌套(POST)"
-            android:textAllCaps="false" />
-
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:onClick="multipleGeneric"
-            android:text="多泛型嵌套(GET)"
             android:textAllCaps="false" />
 
         <Button
@@ -100,6 +79,20 @@
             android:layout_height="wrap_content"
             android:onClick="getUserList"
             android:text="用户列表(GET)"
+            android:textAllCaps="false" />
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="suspend1"
+            android:text="协程直接返回"
+            android:textAllCaps="false" />
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="suspend2"
+            android:text="协程flow"
             android:textAllCaps="false" />
 
     </LinearLayout>
